--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build "
+    "build":"npm install && npm start"
   },
   "keywords": [],
   "author": "",
