--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build":"npm install && npm start"
+    "build":"npm install"
   },
   "keywords": [],
   "author": "",
