--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "basic chat application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "npm install "
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
